--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     <div id="photo1">
                         <img style="height:20%; width:18%" src="assets/images/Portfolio1.jpg">
                     </div>
-                <p style="margin-left:25%;">An avid sportsman and lifelong animal lover, Blake </p>
+                <p style="margin-left:25%; font-size:24px; line-height:40px;">An avid sportsman and lifelong animal lover, Blake has been coding for like 2 months now. Did I mention he loves chocolate? Also, his TA in his berkely coding camp is really awesome and said to be a though she's said to be a tough grader, I wouldn't believe the hearsay! </p>
             <br>
             <br>
-                <p style="margin-top:20%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem quas sapiente similique, voluptatibus id, recusandae impedit exercitationem nesciunt temporibus cum placeat ea illum quisquam eveniet perferendis quis dolore! Tempora, perferendis.</p>
+                <p style="margin-top:0%; font-size:24px; line-height:40px;"> All Blake is asking for is a chance to show you his stuff.  Not in a Louie CK way I mean like web-development skills wise. If he makes it through this course he could have real potential!</p>
             
             </div>
             </div>
