--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div id="photo1">
                         <img style="height:20%; width:18%" src="assets/images/Portfolio1.jpg">
                     </div>
-                <p style="margin-left:25%; font-size:24px; line-height:40px;font-family: 'Indie Flower', cursive;">An avid sportsman and lifelong animal lover, Blake has been coding for like 2 months now. Did I mention he loves chocolate? Also, his TA in his berkely coding camp is really awesome ! She's said to be a tough grader, I wouldn't believe the hearsay! </p>
+                <p style="margin-left:25%; font-size:24px; line-height:40px;font-family: 'Indie Flower', cursive;">An avid sportsman and lifelong animal lover, Blake has been coding for like 2 months now. Did I mention he loves chocolate? Also, his TA in his berkely coding camp is really awesome ! She's said to be a tough grader - but I wouldn't believe the hearsay! </p>
             <br>
             <br>
                 <p style="margin-top:0%; font-size:24px; line-height:40px;font-family: 'Indie Flower', cursive;"> All Blake is asking for is a chance to show you his stuff.  Not like a NY City subway flasher, I mean like web-development skills wise. If he makes it through this course he could have real potential!</p>
